--- a/contact/thanks.html
+++ b/contact/thanks.html
@@ -7,6 +7,12 @@
   <title>Dan Hasting</title>
   <link rel='stylesheet' href='/assets/css/bootstrap.min.css' type='text/css' />
   <style>
+      @media (max-width:600px) {
+          body .header {
+              font-size:12vw;
+          }
+      }
+
       .container {
           width: 95%;
           max-width:600px;
