--- a/donate/index.html
+++ b/donate/index.html
@@ -7,6 +7,17 @@
   <title>Dan Hasting</title>
   <link rel='stylesheet' href='/assets/css/bootstrap.min.css' type='text/css' />
   <style>
+      @media (max-width:600px) {
+          body .header {
+              font-size:12vw;
+          }
+
+          .crypto {
+              white-space:nowrap;
+              font-size:3.5vw;
+          }
+      }
+
       .container {
           width: 95%;
           max-width:600px;
