--- a/contact/index.html
+++ b/contact/index.html
@@ -7,6 +7,12 @@
   <title>Dan Hasting</title>
   <link rel='stylesheet' href='/assets/css/bootstrap.min.css' type='text/css' />
   <style>
+      @media (max-width:600px) {
+          body .header {
+              font-size:12vw;
+          }
+      }
+
       .container {
           width: 95%;
           max-width:600px;
@@ -50,7 +56,7 @@
             <label class="control-label">Comments: *</label>
             <textarea class="form-control" name="comments" rows="7" required></textarea>
         </div>
-        <div class="form-group">
+        <div class="form-group center">
             <button class="btn btn-primary center-block">Submit</button>
             <input type="hidden" name="_next" value="//dh4.github.io/contact/thanks.html" />
             <input type="hidden" name="_subject" value="Contact Submission from dh4.github.io" />
