Change form link

--- a/contact/index.html
+++ b/contact/index.html
@@ -39,7 +39,7 @@
     <h1 class="center header">Dan Hasting</h1>
     <p class="center">Have a question or inquiry? Fill out the form below to contact me.</p>
     <p class="center">* Required Field</p><br />
-    <form class="form-horizontal center-block" method="post" action="https://formspree.io/contact@hasting.email">
+    <form class="form-horizontal center-block" method="post" action="https://formspree.io/f/mzbkygen">
         <div class="form-group">
             <label class="control-label">Name: *</label>
             <input type="text" class="form-control" name="name" required />
